--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -7,15 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <head>
 	<title>Zodiac Booklet</title>   
-
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+	<link rel="stylesheet" href="styles/jquery.mobile-1.4.5.min.css" />
 	<link rel="stylesheet" href="styles/font-awesome.min.css" />
 	<link rel="stylesheet" href="styles/custom.css" />
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="scripts/jquery-1.11.1.min.js"></script>
 	<!--custom js should be before jq-mobile js-->
 	<script src="scripts/custom.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
+	<script src="scripts/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
 
