--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -459,6 +459,10 @@
 	</ul>
 
 	<div class="clear10"></div>
+	
+	<h3>Usual Compatibility</h3>
+
+	<div class="clear10"></div>
 
 	<strong>Aries:</strong> Aries, Leo, Sagittarius, Gemini, Libra, Aquarius<br>
 	<strong>Taurus:</strong> Taurus, Virgo, Capricorn, Cancer, Scorpio, Pisces<br>
@@ -479,7 +483,7 @@
 
 	<div class="text-center"><a href="#detail-2" data-transition="fade" class="ui-btn ui-btn-b ui-btn-inline ui-icon-arrow-r ui-btn-icon-right ui-btn-corner-all">SEE ZODIAC ELEMENTS</a></div>
 
-	<p class="text-center">PRO TIP: You just can not be into a person based only on their zodiac sign. You should also be attracted towards him/her in different other ways before you decide for the 'ONE' for you. Regardless of popular beliefs, you can be totally attracted towards a person who's zodiac is not compatible with your zodiac sign and vice versa. Here is personal experience > I am a Sagittarius and no website on earth will tell you otherwise about LEO and Sagittarius but only that they are 100% compatible. NOP! I have never been at peace with any LEO in my entire life for long enough to tell you that LEO and Sagittarius can be at peace for long time. If I will ever be, I will update this app and let you know. There you go. Peace!</p>
+	<p class="text-center">TIP: You just can not be into a person based only on zodiac sign. You should also have other compatibilities / common grounds before you decide that he/she is the 'ONE'. Regardless of popular beliefs, you can be totally compatible with a person who's zodiac is not compatible with your zodiac sign and vice versa.</p>
 
 	</article>
 	
