--- a/www/index.html
+++ b/www/index.html
@@ -14,9 +14,14 @@
 	<!--custom js should be before jq-mobile js-->
 	<script src="scripts/custom.js"></script>
 	<script src="scripts/jquery.mobile-1.4.5.min.js"></script>
+	
+	<script src="cordova.js"></script> 
+
 </head>
 <body>
 
+<!--
+splash screen added - no need for custom animation
 <div class="app-splash">
 	<div class="inner">
 		<h1>Zodiac Booklet</h1>
@@ -25,6 +30,7 @@
 		</div>
 	</div>
 </div>
+-->
 
 <!-- //////////////////////////////////////////////////////////////////////////////////////////////-->
 <div data-role="page" id="home">
